connect to mongo

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/philbrookes/storage-frontend",
   "dependencies": {
     "express": "^4.12.3",
-    "http": "0.0.0"
+    "http": "0.0.0",
+    "mongoose": "^4.0.3"
   }
 }
