--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.12.3",
     "http": "0.0.0",
-    "mongoose": "^4.0.3"
+    "mongoose": "^4.0.3",
+    "swig": "^1.4.2"
   }
 }
